RESOLVED FIXED285344
Fix site isolation frame process management when loading main frame content with cross-origin-opener-policy
https://bugs.webkit.org/show_bug.cgi?id=285344
Summary Fix site isolation frame process management when loading main frame content w...
Alex Christensen
Reported 2025-01-03 08:45:57 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-03 08:46:08 PST
Alex Christensen
Comment 2 2025-01-03 08:49:55 PST
EWS
Comment 3 2025-01-03 11:35:20 PST
Committed 288412@main (bc070381592b): <https://commits.webkit.org/288412@main> Reviewed commits have been landed. Closing PR #38497 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.