Fix site isolation frame process management when loading main frame content with cross-origin-opener-policy https://bugs.webkit.org/show_bug.cgi?id=285344 rdar://142317920

Reviewed by Sihui Liu and Pascoe.

Fixing this case required 3 changes.  First, WebPageProxy::triggerBrowsingContextGroupSwitchForNavigation
needs to actually switch BrowsingContextGroups.  Second, WebPageProxy::sharedPreferencesForWebProcess,
which is called with every incoming IPC to the WebPageProxy, should not call
BrowsingContextGroup::ensureProcessForConnection when we can get the WebProcessProxy using
WebProcessProxy::processForConnection instead without messing with the BrowsingContextGroup.
Third, the ProvisionalPageProxy constructor has a call to didStartProvisionalLoad that is needed for
PSON but not site isolation.

* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::ProvisionalPageProxy):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::sharedPreferencesForWebProcess const):
(WebKit::WebPageProxy::triggerBrowsingContextGroupSwitchForNavigation):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, CrossOriginOpenerPolicyMainFrame)):

Canonical link: https://commits.webkit.org/288412@main